--- a/index.html
+++ b/index.html
@@ -300,15 +300,16 @@ time {
 
 .icon {
 	display: inline-block;
-	max-width: 5em;
-	max-height: 5em;
+	max-width: 3.5em;
+	max-height: 3.5em;
+	border-radius: 50%;
 	text-decoration: none;
 	vertical-align: text-bottom;
 	margin-right: 1em;
 }
 
 img.icon {
-	border-radius: 50px;
+	border-radius: 5px;
 }
 
 .user-icon {
