--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"/><title>Tanvir Rayhan</title><style>
+<html><head><link rel="icon" href="https://media-exp1.licdn.com/dms/image/C4E03AQEKNMjMKfSBSQ/profile-displayphoto-shrink_200_200/0/1626811766045?e=1646870400&v=beta&t=U7qmL823fp5bIb13RuUW0EHJyrYBLlVv7J2rIc9HMdU"><meta http-equiv="Content-Type" content="text/html; charset=utf-8"/><title>Tanvir Rayhan</title><style>
 /* cspell:disable-file */
 /* webkit printing magic: print all background colors */
 html {
